# demo_python_package

./: README.md  pyproject.toml  setup.cfg
demo_package/: __init__.py
demo_package/utils/: browser.py
