[metadata]
name = demo_package
version = 1.0
author = Thinh Vu
author_email = vnstock-hq@gmail.com
description = Demo package for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/demo_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]python3 -m build
package_dir = 
packages = find:
python_requires = >=3.7